client: Fix alignment of sender name.

--- a/modules/static/construct.css
+++ b/modules/static/construct.css
@@ -2850,7 +2850,7 @@ body.loaded
 	flex-shrink: 0;
 	flex-flow: row nowrap;
 	align-self: stretch;
-	align-items: flex-start;
+	align-items: center;
 	justify-content: flex-end;
 	font-size: 16px;
 	width: 20ch;
